platform-overlays/aks/15-portal/delete-chart-service.yaml
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: portal
  namespace: uwv-platform
